// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Avatar component should render large 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "borderRadius": 80,
      "height": 160,
      "marginBottom": 40,
      "marginRight": 40,
      "overflow": "hidden",
      "width": 160,
    }
  }
  themeSize={160}
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      size="large"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/member_images/members.nophoto_1000_1000_90_c1.jpg",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 80,
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
      themeSize={160}
    />
  </View>
</View>
`;

exports[`The Avatar component should render medium 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "borderRadius": 40,
      "height": 80,
      "marginBottom": 20,
      "marginRight": 20,
      "overflow": "hidden",
      "width": 80,
    }
  }
  themeSize={80}
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      size="medium"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/member_images/members.nophoto_1000_1000_90_c1.jpg",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 40,
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
      themeSize={80}
    />
  </View>
</View>
`;

exports[`The Avatar component should render small 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#A5A5A5",
      "borderRadius": 20,
      "height": 40,
      "marginBottom": 10,
      "marginRight": 10,
      "overflow": "hidden",
      "width": 40,
    }
  }
  themeSize={40}
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      size="small"
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://dg0ddngxdz549.cloudfront.net/images/cached/images/remote/http_s3.amazonaws.com/ns.images/all/member_images/members.nophoto_1000_1000_90_c1.jpg",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 20,
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
      themeSize={40}
    />
  </View>
</View>
`;
